--- a/app/src/main/res/layout/answer_option_element.xml
+++ b/app/src/main/res/layout/answer_option_element.xml
@@ -7,6 +7,7 @@
     android:layout_marginTop="5dp"
     android:orientation="vertical">
     <LinearLayout
+        android:baselineAligned="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -22,24 +23,41 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                android:layout_marginBottom="5dp"
-                android:text="TextView" />
+                android:layout_marginBottom="5dp" />
             <ProgressBar
                 android:id="@+id/answer_option_progress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:indeterminate="true"
                 android:indeterminateDrawable="@drawable/progress"/>
-
-            <ImageView
-                android:id="@+id/answer_option_image"
-                android:layout_gravity="center"
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:maxHeight="100dp"
-                android:scaleType="fitCenter"
                 android:layout_marginBottom="5dp"
+                android:layout_gravity="center_horizontal">
+            <ImageView
+                android:id="@+id/answer_option_image"
+                android:contentDescription="@string/Poll_Answ_Option_Img_Desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxHeight="128dp"
+                android:scaleType="fitCenter"
+
+                android:visibility="gone"
                 app:srcCompat="@drawable/ic_menu_gallery" />
+                <ImageView
+                    android:layout_width="48dp"
+                    android:id="@+id/answer_option_icon"
+                    android:contentDescription="@string/Poll_Answ_Option_Img_Icon_Desc"
+                    android:layout_height="48dp"
+                    android:tint="@color/colorPrimaryMedLight"
+                    android:layout_alignBottom="@id/answer_option_image"
+                    android:layout_alignEnd="@id/answer_option_image"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:visibility="gone"
+                    android:src="@drawable/ic_loupe_black_24dp"/>
+            </RelativeLayout>
         </LinearLayout>
 
 
@@ -76,7 +94,6 @@
             android:id="@+id/answer_option_percent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:textAlignment="textEnd" />
     </LinearLayout>
 
