--- a/app/src/main/res/layout/fragment_consult_profil.xml
+++ b/app/src/main/res/layout/fragment_consult_profil.xml
@@ -55,17 +55,16 @@
                 android:layout_height="wrap_content"
                 android:enabled="false"
                 android:padding="10dp"
-                android:text="S'abonner" />
+                android:text="@string/Profil_Consult_Subscribe" />
         </com.balysv.materialripple.MaterialRippleLayout>
 
         <TextView
-            android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:text="Nom d'utilisateur" />
+            android:text="@string/Mng_Profil_UsernameTag" />
 
         <TextView
                 android:id="@+id/profil_check_usernameText"
@@ -76,7 +75,6 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="20dp"
                 android:paddingBottom="10dp"
-                android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
         <View
@@ -100,7 +98,7 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="20dp"
                 android:paddingBottom="10dp"
-                android:text="Voir les sondages"
+                android:text="@string/Profil_Consult_Check_Polls"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
         </com.balysv.materialripple.MaterialRippleLayout>
@@ -125,7 +123,7 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="20dp"
                 android:paddingBottom="10dp"
-                android:text="Voir les publications"
+                android:text="@string/Profil_Consult_Check_Posts"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
         </com.balysv.materialripple.MaterialRippleLayout>
