--- a/app/src/main/res/layout/fragment_manage_profil.xml
+++ b/app/src/main/res/layout/fragment_manage_profil.xml
@@ -7,10 +7,6 @@
     android:orientation="vertical"
     tools:context=".ManageProfilFragment">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -43,7 +39,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:clickable="true"
-                    android:text="Changer"
+                    android:focusable="true"
+                    android:text="@string/Mng_Profil_Change_Avatar"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/colorSecondary"
@@ -55,8 +52,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Supprimer"
+                    android:text="@string/Mng_Profil_Delete_Avatar"
                     android:clickable="true"
+                    android:focusable="true"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/colorAccent"
@@ -66,19 +64,18 @@
 
 
         </LinearLayout>
-    </FrameLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:paddingStart="10dp"
-            android:text="Nom d'utilisateur" />
+            android:paddingEnd="10dp"
+            android:text="@string/Mng_Profil_UsernameTag" />
         <com.balysv.materialripple.MaterialRippleLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -94,7 +91,6 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="20dp"
                 android:paddingBottom="10dp"
-                android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
         </com.balysv.materialripple.MaterialRippleLayout>
@@ -104,12 +100,12 @@
             android:background="@color/LightGrey"/>
 
             <TextView
-                android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:paddingStart="10dp"
-                android:text="Courriel" />
+                android:paddingEnd="10dp"
+                android:text="@string/Mng_Profil_EmailTag" />
 
     <com.balysv.materialripple.MaterialRippleLayout
         android:layout_width="match_parent"
@@ -127,7 +123,6 @@
             android:paddingTop="10dp"
             android:paddingEnd="20dp"
             android:paddingBottom="10dp"
-            android:text="TextView"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16sp"
             tools:drawableStart="@color/colorAccent" />
@@ -151,7 +146,7 @@
             android:paddingTop="10dp"
             android:paddingEnd="20dp"
             android:paddingBottom="10dp"
-            android:text="Réinitialiser le mot de passe"
+            android:text="@string/Mng_Profil_PasswordTag"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16sp" />
         </com.balysv.materialripple.MaterialRippleLayout>
@@ -174,7 +169,7 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="20dp"
                 android:paddingBottom="10dp"
-                android:text="Créateurs suivis"
+                android:text="@string/Mng_Profil_FollowedTag"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="16sp" />
         </com.balysv.materialripple.MaterialRippleLayout>
@@ -197,7 +192,7 @@
             android:paddingTop="10dp"
             android:paddingEnd="20dp"
             android:paddingBottom="10dp"
-            android:text="Gestion du compte"
+            android:text="@string/Mng_Profil_OtherTag"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16sp" />
         </com.balysv.materialripple.MaterialRippleLayout>
