--- a/app/src/main/res/layout/option_edit_element.xml
+++ b/app/src/main/res/layout/option_edit_element.xml
@@ -13,8 +13,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:text="TextView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/sondage_edit_option_num"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
@@ -22,13 +21,17 @@
         <com.balysv.materialripple.MaterialRippleLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-        <ImageButton
-            android:id="@+id/sondage_edit_option_delete"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/round_btn"
-            android:src="@drawable/ic_delete"
-            android:tint="@color/colorRed" />
+
+            <ImageButton
+                android:id="@+id/sondage_edit_option_delete"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:padding="5dp"
+                android:background="@drawable/round_btn"
+                android:contentDescription="@string/Create_Option_Elem_Delete_Desc"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_delete"
+                android:tint="@color/colorRed" />
         </com.balysv.materialripple.MaterialRippleLayout>
     </LinearLayout>
 
@@ -39,11 +42,10 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/sondage_edit_option_texte"
-        android:hint="Réponse" />
+        android:hint="@string/Create_Option_Elem_TextField_Hint" />
 
     <TextView
         android:layout_marginTop="5dp"
-        android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/option_edit_texte_error"
@@ -69,7 +71,7 @@
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_file_upload_color"
             android:padding="10dp"
-            android:text="Télécharger" />
+            android:text="@string/Create_Option_Elem_BtnUpload" />
     </com.balysv.materialripple.MaterialRippleLayout>
 
 
@@ -77,7 +79,6 @@
     </RelativeLayout>
 
     <TextView
-        android:text="TextView"
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -91,7 +92,6 @@
         android:id="@+id/option_edit_instruct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textAlignment="center" />
     <ProgressBar
         android:id="@+id/sondage_edit_option_progress"
@@ -104,6 +104,11 @@
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
         android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -111,10 +116,23 @@
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         android:visibility="gone"
-        android:maxHeight="100dp"
+        android:maxHeight="128dp"
         android:scaleType="fitCenter"
-        android:layout_weight="1"
+        android:contentDescription="@string/Poll_Answ_Option_Img_Desc"
         android:id="@+id/sondage_edit_option_image_preview" />
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_loupe_black_24dp"
+                android:tint="@color/colorPrimaryMedLight"
+                android:layout_alignEnd="@id/sondage_edit_option_image_preview"
+                android:layout_alignBottom="@id/sondage_edit_option_image_preview"
+                android:layout_marginBottom="5dp"
+                android:contentDescription="@string/Poll_Answ_Option_Img_Icon_Desc"
+                android:layout_marginEnd="5dp"
+                android:visibility="gone"
+                android:id="@+id/sondage_edit_option_image_preview_icon"/>
+        </RelativeLayout>
     </com.balysv.materialripple.MaterialRippleLayout>
 
 
