--- a/app/src/main/res/layout/password_input_dialog.xml
+++ b/app/src/main/res/layout/password_input_dialog.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Entrez votre mot de passe"
+        android:text="@string/Pass_Dialog_Tag"
         android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -16,7 +16,7 @@
         android:id="@+id/dialog_pass_check_field"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Mot de passe"
+        android:hint="@string/Pass_Field_Hint"
         android:inputType="textPassword" />
 
 </LinearLayout>
