--- a/app/src/main/res/layout/question_edit_element.xml
+++ b/app/src/main/res/layout/question_edit_element.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:paddingEnd="7dp"
     android:paddingStart="7dp"
@@ -12,8 +11,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:text="Question #1"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/sondage_edit_num_quest"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
@@ -30,6 +28,7 @@
                 android:paddingTop="4dp"
                 android:paddingBottom="4dp"
                 android:src="@drawable/ic_delete"
+                android:contentDescription="@string/Create_Question_Elem_Delete_Desc"
                 android:tint="@color/colorRed" />
         </com.balysv.materialripple.MaterialRippleLayout>
     </LinearLayout>
@@ -39,11 +38,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Votre question"
+        android:hint="@string/Create_Question_Elem_TextField_Hint"
         android:inputType="textPersonName" />
 
     <TextView
-        android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/question_edit_texte_error"
@@ -51,10 +49,9 @@
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@color/colorRed" />
     <TextView
-        android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Type de question"
+        android:text="@string/Create_Question_Elem_Type_Tag"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:textSize="18sp" />
 
@@ -66,7 +63,6 @@
         android:id="@+id/sondage_edit_question_type" />
 
     <TextView
-        android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/question_edit_type_error"
@@ -74,15 +70,13 @@
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@color/colorRed" />
     <TextView
-        android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Réponses"
+        android:text="@string/Create_Question_Elem_Option_Tag"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:textSize="18sp" />
 
     <TextView
-        android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/question_edit_options_error"
@@ -101,7 +95,7 @@
             android:drawableEnd="@drawable/ic_fleche_droite"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:text="Ouvrir la liste" />
+            android:text="@string/Create_Question_Elem_Option_Btn" />
     </com.balysv.materialripple.MaterialRippleLayout>
     <View
         android:layout_width="match_parent"
